--- a/resume/assets/css/styles.css
+++ b/resume/assets/css/styles.css
@@ -12,6 +12,7 @@
   --container-color: #FAFAFA;
   --container-color-alt: #F0EFEF;
   --body-color: #FCFCFC;
+  --span-color: rgb(209, 195, 0);
 
   /*========== Font and typography ==========*/
   --body-font: 'Poppins', sans-serif;
